Bug de overflow x

--- a/Proyecto/index.css
+++ b/Proyecto/index.css
@@ -1,7 +1,7 @@
 html {
-    margin: 0 !important;
+    /* margin: 0 !important;
     box-sizing: border-box !important;
-    overflow-x: hidden !important;
+    overflow-x: hidden !important; */
 }
 
 .text-platzi {
